# ts-code-scan

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build_rs_cov.profraw
.claude-plugin/: marketplace.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
plugin/.claude-plugin/: plugin.json
plugin/skills/scan/: SKILL.md
src/: extract.rs  extract_test.rs  index.rs  index_test.rs  lib.rs  main.rs  main_test.rs  output.rs  output_test.rs  parse.rs  parse_test.rs  rules.rs  rules_test.rs  walk.rs  walk_test.rs
tests/: cli_test.rs
