[package]
name = "code-scan"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Fast TypeScript/JavaScript codebase indexer for AI agents"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
oxc = { version = "0.116", features = ["semantic", "ast_visit"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
cargo_common_metadata = "allow"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
strip = true
